# LAWOS

LAWOS/: .env.example  .gitignore  CHANGELOG.md  DESKTOP.md  README.md  next.config.ts  package-lock.json  package.json
LAWOS/.claude/: launch.json
LAWOS/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
LAWOS/app/analytics/: page.tsx
LAWOS/app/calendar/: page.tsx
LAWOS/app/career/: page.tsx
LAWOS/app/foundation/: page.tsx
LAWOS/app/legal-english/: page.tsx
LAWOS/app/llb/: page.tsx
LAWOS/app/reading/: page.tsx
LAWOS/app/research/: page.tsx
LAWOS/app/scholarships/: page.tsx
LAWOS/app/settings/: page.tsx
LAWOS/components/calendar/: calendar-view.tsx
LAWOS/components/charts/: charts.tsx
LAWOS/components/dashboard/: activity-feed.tsx  area-progress-grid.tsx  deadlines-list.tsx  hero-cards.tsx  tasks-list.tsx  widgets.tsx
LAWOS/components/entities/: empty-state.tsx  entity-dialog.tsx  new-button.tsx  record-actions.tsx
LAWOS/components/layout/: app-shell.tsx  command-menu.tsx  live-refresh.tsx  logo.tsx  mobile-nav.tsx  page-header.tsx  sidebar.tsx  theme-toggle.tsx  topbar.tsx
LAWOS/components/motion/: animated-number.tsx  motion-section.tsx  (+1 more)
LAWOS/hooks/: use-mounted.ts
LAWOS/lib/: areas.ts  fuzzy.ts  nav.ts  utils.ts
LAWOS/scripts/: copy-standalone.mjs  tauri-dev.mjs
LAWOS/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
LAWOS/src-tauri/capabilities/: default.json
LAWOS/src-tauri/icons/: icon.icns
LAWOS/src-tauri/src/: lib.rs  main.rs
LAWOS/styles/: README.md
LAWOS/types/: index.ts
(+36 files in other folders)
