[package]
name = "lawos"
version = "1.0.0"
description = "LawOS — an operating system for an academic, legal and professional life"
authors = ["Aziz Saburov"]
edition = "2021"
rust-version = "1.77.2"

# The desktop entry point lives in src/main.rs; the bulk of the app is a library
# so it can also be reused by the mobile entry point if ever needed.
[lib]
name = "lawos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Remembers window size + position across launches.
tauri-plugin-window-state = "2"
# Native error dialog if the embedded server can't start (used from Rust only).
tauri-plugin-dialog = "2"

[features]
# Used by Tauri's CLI when building with `--features custom-protocol`.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
